Added onload animtaion

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "sass-loader": "^8.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "gsap": "^3.2.6"
   }
 }
